---
source: integ-tests/tests/parser.rs
expression: error
---
error[duplicate-key]: 
  ┌─ table_then_dotted:4:12
  │
3 │         b = {}
  │         - first key instance
4 │         [a.b]
  │            ^ duplicate key


